--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,15 +1,21 @@
 * {
-    font-family: '닉스곤체 2.0';
-    font-size: 40px;
-    /*color: darkgray;*/
+  font-family: '닉스곤체 2.0';
+  font-size: 40px;
+  /*color: darkgray;*/
+  box-sizing: content-box;
+}
+
+body {
+  margin: 0px;
+  height: 100vh;
 }
 
 .btn {
-    border: none;
-    outline: none;
-    background-color: transparent;
+  border: none;
+  outline: none;
+  background-color: transparent;
 }
 
 .main {
-    color: white;
+  color: white;
 }
