--- a/client/src/App.css
+++ b/client/src/App.css
@@ -255,8 +255,6 @@ body {
   width: 60%;
   margin: 2%;
 }
-.logBtn2 {
-}
 
 .logBtn-hover {
   width: 60%;
@@ -272,7 +270,7 @@ body {
 }
 
 .logBtn-hover2 {
-  width: 30%;
+  width: 100%;
   height: 30px;
   font-size: 18px;
   color: #fff;
@@ -280,6 +278,7 @@ body {
   border: none;
   background-size: 300% 100%;
   border-radius: 5px;
+  margin: 10px 0px;
   -o-transition: all 0.4s ease-in-out;
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
