--- a/client/src/css/clouds.css
+++ b/client/src/css/clouds.css
@@ -1,32 +1,28 @@
-.bg{
-	position: relative;
-	width: 100%;
-	height: 100%;
-	background: linear-gradient(to bottom, 
-	#A0CFEC, 
-	#ADDFFF, 
-	#E0FFFF, 
-	#F0FFFF, 
-	#FEFCFF, 
-	#FEFCFF,  
-	white,
-	white, 
-	white, 
-	#FFF5EE,
-	#F7E7CE);
-	background-size: cover;
+.bg {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient( to bottom, #a0cfec, #addfff, #e0ffff, #f0ffff, #fefcff, #fefcff, white, white, white, #fff5ee, #f7e7ce);
+    background-size: cover;
 }
-.move1{
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	background: url(../img/clouds.png) repeat-x ;
-	background-size: cover;
-	animation: drop1 7000s linear infinite;
+
+.move1 {
+    background: url(../img/clouds.png) repeat-x;
+    background: -webkit-canvas(animation);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    animation: drop1 5000s linear infinite;
+    /* object-fit: contain; */
 }
-@keyframes drop1{
-	from{background-position: 0 0;}
-	to{background-position: 8000% 0;}
+
+@keyframes drop1 {
+    from {
+        background-position: 0 0;
+    }
+    to {
+        background-position: 25000% 0;
+    }
 }
