--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,7 +11,7 @@ body {
 .canvas_container {
     width: 100%;
     height: 100%;
-    margin-top: 8%;
+    margin-top: 7%;
 }
 
 .myCanvas {
@@ -27,16 +27,18 @@ body {
 }
 
 .speech-bubble {
-    margin: 0px 25%;
-    height: 30vh;
+    margin: 0px 30%;
+    height: 40vh;
+    width: 40vw;
     text-align: center;
     margin-top: 200px;
-    background: #fefcff;
+    background-color: #f4f5f5;
     outline: none;
     animation: mymove 1s linear;
     z-index: 15;
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
     font-weight: bolder;
 }
@@ -46,57 +48,74 @@ body {
     font-size: 2rem;
 }
 
-@media only screen and (max-width: 768px) {
-    .speech-bubble {
-        display: flex;
-        flex-direction: column;
-    }
-    .speech-bubble .speech-bubble_title {
-        font-size: 1.5rem;
-    }
-    .speech-bubble>ul>li {
-        flex-direction: column;
-    }
-    .FaRegThumbsUp,
-    .FaRegThumbsDown {
-        font-size: 1.5rem;
-    }
-}
-
 .speech-bubble>ul {
-    width: 60%;
+    width: 100%;
     padding-left: 0px;
+    opacity: 1;
 }
 
 .speech-bubble div {
     padding: 10px 0;
     font-size: 2rem;
-    color: rgb(38, 38, 38);
+    color: black;
 }
 
-.speech-bubble .FaRegThumbsUp:active,
-.speech-bubble .FaRegThumbsDown:active {
-    opacity: 0.5;
-}
+.speech-bubble>ul>li>div button:active .speech-bubble>ul>li button:active {}
 
 .speech-bubble>ul>li {
-    color: darkgray;
+    color: black;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
+    height: 7vh;
+}
+
+.speech-bubble>ul>li .modalButtons {
+    display: flex;
+    width: 30%;
 }
 
 .speech-bubble>ul>li button {
+    display: flex;
     outline: none;
     border: none;
     background: transparent;
-    padding: 5px 10px;
-    color: rgb(38, 38, 38);
+    padding: 5px 5px;
+    color: black;
+    flex: 1 1 30%;
+    font-size: 1.6rem;
 }
 
-.speech-bubble>ul>li>div {
-    font-size: 1.2rem;
+.speech-bubble>ul>li .title {
+    font-size: 1.5rem;
     display: flex;
+    width: 70%;
+    flex: 1 1 70%;
+    word-break: break-all;
+    padding-left: 10%;
+}
+
+@media only screen and (max-width: 768px) {
+    .speech-bubble {
+        display: flex;
+        flex-direction: column;
+        width: 50vw;
+    }
+    .speech-bubble .speech-bubble_title {
+        font-size: 1.2rem;
+    }
+    .speech-bubble>ul>li {
+        flex-direction: column;
+    }
+    .speech-bubble>ul>li .title {
+        font-size: 1.2rem;
+        padding: 10px 15px;
+        justify-content: center;
+    }
+    .speech-bubble>ul>li>div>button {
+        font-size: 1.3rem;
+    }
 }
 
 @keyframes mymove {
