--- a/client/src/css/clouds.css
+++ b/client/src/css/clouds.css
@@ -1,28 +1,41 @@
 .bg {
-    position: relative;
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient( to bottom, #a0cfec, #addfff, #e0ffff, #f0ffff, #fefcff, #fefcff, white, white, white, #fff5ee, #f7e7ce);
-    background-size: cover;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    to bottom,
+    #a0cfec,
+    #addfff,
+    #e0ffff,
+    #f0ffff,
+    #fefcff,
+    #fefcff,
+    white,
+    white,
+    white,
+    #fff5ee,
+    #f7e7ce
+  );
+  background-size: cover;
 }
 
 .move1 {
-    background: url(../img/clouds.png) repeat-x;
-    background: -webkit-canvas(animation);
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    animation: drop1 5000s linear infinite;
-    /* object-fit: contain; */
+  background: url(../img/clouds.png) repeat-x;
+  background: -webkit-canvas(animation);
+  position: position;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  animation: drop1 5000s linear infinite;
+  object-fit: contain;
 }
 
 @keyframes drop1 {
-    from {
-        background-position: 0 0;
-    }
-    to {
-        background-position: 25000% 0;
-    }
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: 25000% 0;
+  }
 }
