[CLIENT] [FIX] 디렉토리 정리 및 메인페이지 디자인 수정

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 * {
   font-family: '닉스곤체 2.0', 'Source Sans Pro';
   /*color: darkgray;*/
