--- a/client/src/css/calendar.css
+++ b/client/src/css/calendar.css
@@ -14,3 +14,119 @@
   color: #7b0b56;
   background: #ebc2bb;
 }
+
+.modal {
+  display: flex;
+  background: rgba(0, 0, 0, 0.1);
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  flex-direction: column;
+  justify-content: center;
+  font-weight: bold;
+}
+.modal:target {
+  display: table;
+}
+
+.modal__dialog {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.modal__content {
+  background: #fefcff; /*#F0FFF0*/
+  width: 45%;
+  margin: auto;
+  position: relative;
+  animation: slideUp 0.3s ease-in-out;
+  border-radius: 5px 5px 5px 5px;
+  text-align: center;
+}
+
+.modal__header {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  background: linear-gradient(90deg, #0ba360, #3cba92, #2bb673, #30dd8a);
+  color: white;
+  padding: 1rem;
+  position: relative;
+  text-align: center;
+  font-size: 25px;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+.modal__text {
+  margin-top: 0%;
+  text-align: center;
+  padding: 0.5rem;
+  font-size: 25px;
+  color: white;
+  text-shadow: -1.1px 0 black, 0 1.1px black, 1.1px 0 black, 0 -1.1px black;
+  line-height: -100%;
+}
+
+.modal__close {
+  color: white;
+  text-decoration: none;
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+  font-size: 25px;
+}
+
+.modalButtons {
+  border: none;
+  outline: none;
+  padding: 0.5rem;
+  line-height: 30px;
+  background-color: transparent;
+  font-size: 30px;
+  color: #8ab78a;
+  text-align: center;
+}
+
+.modalButtons2 {
+  border: none;
+  outline: none;
+  padding: 0.5rem;
+  line-height: 30px;
+  background-color: transparent;
+  font-size: 30px;
+  color: #dc9898;
+  text-align: center;
+}
+
+/*.speech-bubble .speech-bubble_title {
+      font-size: 1.2rem;
+  }
+  .speech-bubble>ul>li {
+      flex-direction: column;
+  }
+  .speech-bubble>ul>li .title {
+      font-size: 1.2rem;
+      padding: 10px 15px;
+      justify-content: center;
+  }
+  .speech-bubble>ul>li>div>button {
+      font-size: 1.3rem;
+  } */
+
+/* .speech-bubble {
+  margin: 0px 30%;
+  height: 40vh;
+  width: 40vw;
+  text-align: center;
+  margin-top: 200px;
+  background-color: #F0FFF0
+  ;
+  outline: none;
+  animation: mymove 1s linear;
+  z-index: 15;
+@@ -125,7 +227,7 @@ body {
+  to {
+      opacity: 1;
+  }
+} */
